--- a/case-studies.html
+++ b/case-studies.html
@@ -239,7 +239,7 @@
 
                         <p>Lorem ipsum dolor sit amet consectetur. Mattis luctus est tortor habitant vitae non auctor.</p>
                     </div>
-                    
+
                     <div class="case-studies-frame">
                         <div class="case-studies-DSC"></div>
                         <div class="case-studies-DSC-2"></div>
@@ -262,6 +262,19 @@
                         <img class="before-text" src="./media/icons/content-home/Before.png">
                         <img class="after-text" src="./media/icons/content-home/After.png">
                         <img class="scroll-text" src="./media/icons/content-home/scroll.png">
+                        <div class="btn-mquery-case-studies-img">
+                            <button>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="18" viewBox="0 0 10 18" fill="none">
+                                    <path d="M8.75 16.5L1.25 9L8.75 1.5" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </button>
+
+                            <button>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="18" viewBox="0 0 10 18" fill="none">
+                                    <path d="M1.25 16.5L8.75 9L1.25 1.5" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                     
                     <div class="case-studies-bar-case-studies">
