--- a/case-studies.html
+++ b/case-studies.html
@@ -241,16 +241,16 @@
                     </div>
 
                     <div class="case-studies-frame">
-                        <div class="case-studies-DSC"></div>
-                        <div class="case-studies-DSC-2"></div>
-                        <div class="case-studies-DSC-4"></div>
-                        <div class="case-studies-DSC-5"></div>
-                        <div class="case-studies-DSC-6"></div>
-                        <div class="case-studies-DSC-7"></div>
-                        <div class="case-studies-DSC-8"></div>
-                        <div class="case-studies-DSC-9"></div>
-                        <div class="case-studies-DSC-10"></div>
-                        <div class="case-studies-DSC-11"></div>
+                        <div class="case-studies-DSC case-studies-DSC-mquery"></div>
+                        <div class="case-studies-DSC-2 case-studies-DSC-mquery"></div>
+                        <div class="case-studies-DSC-4 case-studies-DSC-mquery"></div>
+                        <div class="case-studies-DSC-5 case-studies-DSC-mquery"></div>
+                        <div class="case-studies-DSC-6 case-studies-DSC-mquery"></div>
+                        <div class="case-studies-DSC-7 case-studies-DSC-mquery"></div>
+                        <div class="case-studies-DSC-8 case-studies-DSC-mquery"></div>
+                        <div class="case-studies-DSC-9 case-studies-DSC-mquery"></div>
+                        <div class="case-studies-DSC-10 case-studies-DSC-mquery"></div>
+                        <div class="case-studies-DSC-11 case-studies-DSC-mquery"></div>
                         <img class="case-studies-img" src="./media/icons/content-home/DSC_3147 2.png" />
                         <div class="case-studies-time">
                             <div class="case-studies-text-wrapper-2">Treatment Plan</div>
@@ -263,13 +263,13 @@
                         <img class="after-text" src="./media/icons/content-home/After.png">
                         <img class="scroll-text" src="./media/icons/content-home/scroll.png">
                         <div class="btn-mquery-case-studies-img">
-                            <button>
+                            <button onclick="imgBefore()">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="10" height="18" viewBox="0 0 10 18" fill="none">
                                     <path d="M8.75 16.5L1.25 9L8.75 1.5" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                             </button>
 
-                            <button>
+                            <button onclick="imgAfter()">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="10" height="18" viewBox="0 0 10 18" fill="none">
                                     <path d="M1.25 16.5L8.75 9L1.25 1.5" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
