--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <div class="content1-2-container">
                 <div class="content1-container1">
                   <div class="background1">
-                    <img src="./media/icons/content-home/fondo-bokeh-azul-tinta-oscura-abstracta-fondo-luces-azul-cobalto-desenfocado 2.png" alt="">
+                    <img class="img-home-background1" src="./media/icons/content-home/fondo-bokeh-azul-tinta-oscura-abstracta-fondo-luces-azul-cobalto-desenfocado 2.png" alt="">
 
                     <div class="content1-container1-content">
                       <div class="title-content1-container">
