--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                     aligner outcomes. <span>One platform.</span>
                   </h2>
 
-                  <div>
+                  <div class="text123-content1-container2-container">
                     <div class="text1-content1-container2">
                       <div class="title-text1-content1-container2">
                         <h3>Request treatment plans<br> from expert orthodontists</h3>
