--- a/index.html
+++ b/index.html
@@ -774,9 +774,9 @@
                 <span class="container3-text-wrapper-2">never been this convenient</span>
               </p>
               <div class="container3-div">
-                <img class="container3-img" src="https://c.animaapp.com/trYKWs4D/img/upload-4400806.svg" />
-                <div class="container3-text-wrapper-3">01</div>
-                <div class="container3-div-2">
+                <img id="container3-img1" class="container3-img" src="https://c.animaapp.com/trYKWs4D/img/upload-4400806.svg" />
+                <div id="container3-text-wrapper-3-1" class="container3-text-wrapper-3">01</div>
+                <div id="container3-div-2-1" class="container3-div-2">
                   <p class="container3-upload-your-case-in">Upload your case <br />in just a few clicks</p>
                   <p class="container3-p">
                     Send us patient records, photographs, X-rays,<br class="br-mobile"> and<br class="br-desktop"> treatment goals through our software or<br class="br-mobile"> the software <br class="br-desktop">you use.
@@ -784,9 +784,9 @@
                 </div>
               </div>
               <div class="container3-div-3">
-                <img class="container3-img" src="https://c.animaapp.com/trYKWs4D/img/text-editor-4400968.svg" />
-                <div class="container3-text-wrapper-3">02</div>
-                <div class="container3-div-2">
+                <img id="container3-img2" class="container3-img" src="https://c.animaapp.com/trYKWs4D/img/text-editor-4400968.svg" />
+                <div id="container3-text-wrapper-3-2" class="container3-text-wrapper-3">02</div>
+                <div id="container3-div-2-2" class="container3-div-2">
                   <div class="container3-receive-your">Receive your <br />treatment plan</div>
                   <p class="container3-text-wrapper-4">
                     Our experts detail the necessary orthodontic <br />adjustments — using the aligner software of<br class="br-mobile" /> your choice.
@@ -794,9 +794,9 @@
                 </div>
               </div>
               <div class="container3-div-4">
-                <img class="container3-img" src="https://c.animaapp.com/trYKWs4D/img/message-6494882-1.svg" />
-                <div class="container3-text-wrapper-3">03</div>
-                <div class="container3-div-2">
+                <img id="container3-img3" class="container3-img" src="https://c.animaapp.com/trYKWs4D/img/message-6494882-1.svg" />
+                <div id="container3-text-wrapper-3-3" class="container3-text-wrapper-3">03</div>
+                <div id="container3-div-2-3" class="container3-div-2">
                   <div class="container3-count-on-ongoing">Count on <br />ongoing support</div>
                   <p class="container3-text-wrapper-4">
                     After revisions, feedback and approval, we’ll<br class="br-mobile"/> guide you all<br class="br-desktop"> the way through implementation<br class="br-mobile"/> for the best
