--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
                   <div class="footer-div"></div>
                 </div>
               </div>
-              <img class="footer-glass" src="./media/icons/content-home/glass.png">
+              <img class="footer-glass" src="./media/icons/content-home/fondo-bokeh-azul-tinta-oscura-abstracta-fondo-luces-azul-cobalto-desenfocado 2.png">
               <img class="footer-logo-svg" src="./media/icons/content-home/logo svg 1.svg" />
               <a class="footer-btn-a" href="./services.html">
               <button class="footer-btn"><div class="text-wrapper">Get Started Today</div></button>
