--- a/contact-us.html
+++ b/contact-us.html
@@ -223,7 +223,7 @@
                                     </div>
                                     <div class="contact-us-field-3">
                                         <div class="contact-us-text-wrapper-2">Message</div>
-                                        <div class="contact-us-field-4"></div>
+                                        <textarea class="contact-us-field-4" rows="5" cols="30"></textarea>
                                     </div>
                                 </div>
                                 <button class="contact-us-btn">
