--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
               <div class="content3-container1">
                 <h2 class="title-content3">
-                  <span>1000 +</span>&nbsp;Plans Reviewed
+                  <span><span id="counter-container1">0</span>&nbsp;+</span>&nbsp;Plans Reviewed
                 </h2>
                 
                 <div class="content3-logo-plans">
