--- a/services.html
+++ b/services.html
@@ -123,7 +123,7 @@
 
             <!-- Header -->
             <header>
-                <div class="header-container">
+                <div id="header-container" class="header-container">
                     <a href="./index.html" class="logo-container">
                     <svg xmlns="http://www.w3.org/2000/svg" width="172" height="35" viewBox="0 0 172 35" fill="none">
                             <path d="M59.2277 10.5125C59.0803 10.0385 58.7196 9.73518 57.854 9.74466C57.5403 9.74782 54.269 9.7731 54.269 9.7731C54.269 9.7731 53.9805 10.6136 53.8519 10.9833C54.0244 10.4809 51.6282 9.91844 51.3334 9.83629C49.5268 9.3339 47.7077 9.52032 46.0642 10.4272C43.7182 11.7226 42.3946 14.7907 42.4386 17.4385C42.4825 20.0737 43.9001 22.6805 46.1552 24.0107C48.4134 25.3441 51.4463 25.2841 53.5696 23.7453C54.3035 25.5495 53.2529 27.8719 51.4181 28.4975C49.5833 29.1231 47.3502 27.9224 46.8421 26.0392C45.9011 26.4184 44.9602 26.7976 44.0193 27.1767C43.0313 27.5749 42.241 27.518 42.5546 28.6334C43.1192 30.6398 44.9571 31.8278 46.8515 32.3081C52.1865 33.6573 58.7886 32.4124 59.1556 25.8465C59.3249 22.8069 59.3437 19.7609 59.3343 16.7181C59.3281 15.2331 59.3155 13.7512 59.3092 12.2661C59.3092 11.6089 59.372 10.9801 59.2277 10.5125ZM51.0386 20.456C49.0971 20.4466 47.8081 19.1416 47.7955 17.1826C47.783 15.2741 49.141 13.8618 51.0041 13.846C52.8984 13.8333 54.3663 15.3121 54.3506 17.211C54.3318 19.1037 52.9392 20.4687 51.0386 20.456Z" fill="#1F4283"/>
@@ -662,7 +662,7 @@
                         <div class="services-get-started-today-2"><span class="close-text-services">Close</span><span class="view-text-services">View</span>&nbsp;Plan Comparison</div>
                     </button>
                     </div>
-                </div>
+            </div>
             <!-- Services End -->
             
             <!-- Footer -->
