--- a/index.html
+++ b/index.html
@@ -893,13 +893,13 @@
 
                   <a href="./services.html">
                   <button class="container5-content-btn">
-                    <div class="container5-content-get-started-today">Get free case <br />evaluation</div>
+                    Get free case <br />evaluation
                   </button>
                   </a>
 
                   <a href="./services.html">
                   <button class="container5-content-button">
-                    <div class="container5-content-get-started-today-2">Explore software <br />for free</div>
+                    Explore software <br />for free
                   </button>
                   </a>
 
@@ -927,7 +927,7 @@
               <img class="footer-glass" src="./media/icons/content-home/fondo-bokeh-azul-tinta-oscura-abstracta-fondo-luces-azul-cobalto-desenfocado 2.png">
               <img class="footer-logo-svg" src="./media/icons/content-home/logo svg 1.svg" />
               <a class="footer-btn-a" href="./services.html">
-              <button class="footer-btn"><div class="text-wrapper">Get Started Today</div></button>
+                Get Started Today
               </a>
       
               <div class="footer-links">
