--- a/about-us.html
+++ b/about-us.html
@@ -284,7 +284,7 @@
                 <img class="footer-glass" src="./media/icons/content-home/glass.png">
                 <img class="footer-logo-svg" src="./media/icons/content-home/logo svg 1.svg" />
                 <a class="footer-btn-a" href="./services.html">
-                <button class="footer-btn"><div class="text-wrapper">Get Started Today</div></button>
+                    Get Started Today
                 </a>
         
                 <div class="footer-links">
