--- a/about-us.html
+++ b/about-us.html
@@ -210,8 +210,8 @@
                     <div class="about-us-overlap">
                         <div class="about-us-frame-2">
                             <p class="about-us-the-challengue-we">
-                                <span class="about-us-text-wrapper">The challengue</span>
-                                <span class="about-us-span">&nbsp;</span>
+                                <span class="about-us-text-wrapper">The challenge</span>
+                                <br class="br-desktop" />
                                 <span class="about-us-text-wrapper-2">we solve</span>
                             </p>
                             <img class="about-us-ortodoncista-mquery" src="./media/icons/content-home/ortodoncista-sosteniendo-telefono-imagen-rayos-x-mandibula-mostrando 1.png">
@@ -223,22 +223,7 @@
                             </p>
                             <div class="about-us-text-wrapper-3">Beyond Limits</div>
                         </div>
-                        <div class="about-us-frame-3">
-                            <div class="about-us-overlap-group">
-                                <p class="about-us-the-alignvision">The AlignVision Advantage<br />Empowering Your
-                                    Practice</p>
-                                <p class="about-us-experience-reduced">
-                                    &#34;Experience reduced chair time, enhanced planning, and increased satisfaction.
-                                    AlignVision equips
-                                    you to deliver superior results effortlessly.”
-                                </p>
-                            </div>
-                            <div class="about-us-text-wrapper-4">Advantage</div>
-                            <div class="about-us-text-wrapper-5">Align Vision</div>
-                            <img class="about-us-value-icons"
-                                src="https://c.animaapp.com/lNAuRkWM/img/value-icons.svg" />
-                            <img class="about-us-img" src="https://c.animaapp.com/lNAuRkWM/img/vector-17.svg" />
-                        </div>
+
                     </div>
                     <div class="about-us-vision">
                         <div class="about-us-overlap-2">
