--- a/blog-single-page.html
+++ b/blog-single-page.html
@@ -598,43 +598,44 @@
                         
                         <h3 class="blog-single-text-wrapper-20">Factors to choose between clear aligners and traditional braces</h3>
                         <p class="blog-single-visibility-and">
-                            <span class="blog-single-span">Visibility and aesthetics<br /></span>
+                            <span class="blog-single-span">Visibility and aesthetics<br /></span><br />
                             <span class="blog-single-text-wrapper-10 margin-factor-to-choose-content">•  Clear aligners: These are undetectable and becomes a
                                 discreet
-                                choice for people without visual braces.<br />•  Traditional
+                                choice for people without visual braces.<br /><br />•  Traditional
                                 braces: The treatment is obvious to see. It is due to the significant metal brackets and
-                                wires.<br /><br /></span>
-                            <span class="blog-single-span">Treatment Duration<br /></span>
+                                wires.<br /></span>
+                                <br />
+                            <span class="blog-single-span">Treatment Duration<br /></span><br />
                             <span class="blog-single-text-wrapper-10 margin-factor-to-choose-content">•  Clear aligners: The duration to get clear aligners may
                                 vary. But,
                                 it is almost equivalent to traditional
-                                braces.<br />•  Traditional braces: The treatment time can also vary. However, the adjustments
+                                braces.<br /><br />•  Traditional braces: The treatment time can also vary. However, the adjustments
                                 can be required
-                                in every 4-6 weeks.<br /></span>
-                            <span class="blog-single-span"><br />Maintenance and Cleaning<br /></span>
+                                in every 4-6 weeks.<br /></span><br />
+                            <span class="blog-single-span"><br />Maintenance and Cleaning<br /></span><br />
                             <span class="blog-single-text-wrapper-10 margin-factor-to-choose-content">•  Clear aligners: The clear aligners are removable. So
                                 you can
                                 properly clean them to reduce the risk of
-                                plaque development and dental hygiene issues.<br />•  Traditional braces: Fixed components need
+                                plaque development and dental hygiene issues.<br /><br />•  Traditional braces: Fixed components need
                                 extra care to
-                                keep food particles from accumulating.<br /><br /></span>
-                            <span class="blog-single-span">Comfort level<br /></span>
+                                keep food particles from accumulating.<br /><br /></span><br />
+                            <span class="blog-single-span">Comfort level<br /></span><br />
                             <span class="blog-single-text-wrapper-10 margin-factor-to-choose-content">•  Clear aligners: These are smooth and pleasant, causing
                                 minimal
-                                discomfort to the cheeks and lips.<br />•  Traditional
-                                braces: Initial pain and irritation from brackets and wires.<br /><br /></span>
-                            <span class="blog-single-span">Cost Considerations<br /></span>
+                                discomfort to the cheeks and lips.<br /><br />•  Traditional
+                                braces: Initial pain and irritation from brackets and wires.<br /><br /></span><br />
+                            <span class="blog-single-span">Cost Considerations<br /></span><br />
                             <span class="blog-single-text-wrapper-10 margin-factor-to-choose-content">•  Clear aligners: The clear aligners are more expensive
                                 than
                                 traditional braces. However, pricing might vary
-                                depending on the case&#39;s complexity.<br />•  Traditional braces: The traditional braces are
+                                depending on the case&#39;s complexity.<br /><br />•  Traditional braces: The traditional braces are
                                 often a more
-                                affordable alternative for orthodontic treatment.<br /><br /></span>
-                            <span class="blog-single-span">Treatment suitability<br /></span>
+                                affordable alternative for orthodontic treatment.<br /><br /></span><br />
+                            <span class="blog-single-span">Treatment suitability<br /></span><br />
                             <span class="blog-single-text-wrapper-10 margin-factor-to-choose-content">•  Clear aligners: These are effective for mild to
                                 moderate instances
                                 but may not be appropriate for severe
-                                orthodontic difficulties.<br />•  Traditional braces: These are adaptable and successful for
+                                orthodontic difficulties.<br /><br />•  Traditional braces: These are adaptable and successful for
                                 various
                                 orthodontic concerns, including more complicated instances.</span>
                         </p>
