--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
                     <div class="cards-content3-container2">
                       <div class="content-card-content4-container1" style="translate: none; rotate: none; scale: none; opacity: 1; transform: translate(0px, 0px);">
-                        <img src="./media/icons/content-home/jonathan-borba-v_2FRXEba94-unsplash 2.png">
+                        <img src="./media/icons/content-home/website illustration-04.png">
 
                         <div class="text-content-card-content4-container1">
                           <h2 class="title-content3-container2">Don’t waste any more time…</h2>
