--- a/index.html
+++ b/index.html
@@ -224,20 +224,6 @@
 
                             <p class="text-no-credit-card">*No credit card required</p>
                         </div>
-
-                        <div class="box-overlap">
-                          <div class="box-button"><img id="box-vector" src="https://c.animaapp.com/O1yJMPG5/img/vector.svg" /></div>
-                        </div>
-                        <div class="box-avatars">
-                          <img src="./media/icons/content-home/avatars.png">
-                        </div>
-
-                        <div class="box-overlap-2">
-                          <div class="box-text-wrapper">3K+</div>
-                          <div class="box-text-wrapper-2">Patients</div>
-                        </div>
-
-                        
                       </div>
                     </div>
                   </div>
@@ -744,7 +730,7 @@
 
                     <div class="cards-content3-container2">
                       <div class="content-card-content3-container2">
-                        <img src="./media/icons/content-home/website illustration-01.png">
+                        <img src="./media/icons/content-home/website illustrations v4-05.png">
 
                         <h3>Free Case Evaluation</h3>
 
